# aichat

./: .aichat.example.toml  .dockerignore  .gitignore  Aitoolset.sh  Android-termux  Argcfile.sh  CLAUDE.md  CONFIG_GUIDE.md  CONFIG_GUIDE_EN.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  MCP.md  Makefile  README.md  config.agent.example.yaml  config.example.yaml  default.nix  flake.nix  make_local_API.rs  models-merge.example.yaml  models.yaml  persistence.rs  sample roles.yaml  setup_popos.sh  test_code_block.sh  test_empty_line_render.sh  test_render_direct.rs
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_request.md
.github/workflows/: ci.yaml  release.yaml
agents/android/: config.yaml
agents/android/functions/: functions.json  index.yaml
aichat-frontend/: Cargo.toml
aichat-frontend/src/: main.rs
aichat_py_root/: requirements.txt
aichat_py_root/aichat_daemon/: __init__.py
aichat_py_root/aichat_tui/: __init__.py
aichat_py_root/core_logic/: __init__.py  logging_config.py
aichat_py_root/scripts/: .placeholder
assets/: arena.html  playground.html  theme.yaml
assets/roles/: %code%.md  %create-prompt%.md  %create-title%.md  %explain-shell%.md  %functions%.md  %rigorous_intellectual_precision%.md  %shell%.md
docker_test_app/: Dockerfile  app.py
functions/: agents.txt  functions.json
functions/react_search_agent/: functions.json  index.yaml
roles/: jules.md
scripts/: benchmark-render.sh  integration.bash  integration.fish  integration.ps1
scripts/completions/: aichat.bash  aichat.fish  aichat.nu  aichat.ps1  aichat.zsh
scripts/shell-completion/: aichat-completion.bash  aichat-completion.fish  aichat-completion.nu  aichat-completion.ps1  aichat-completion.zsh
scripts/shell-integration/: integration.nu  integration.zsh
src/: arena.rs  builtin.rs  cli.rs  client.rs  config.rs  editor.rs  function.rs  history_reader.rs  logger.rs  main.rs  render.rs  repl.rs  serve.rs  term.rs  terminal_rag.rs  utils.rs
src/client/: access_token.rs  azure.rs  azure_openai.rs  bedrock.rs  claude.rs  cloudflare.rs  cohere.rs  common.rs  ernie.rs  gemini.rs  groq.rs  jules.rs  localai.rs  macros.rs  message.rs  mistral.rs  mod.rs  model.rs  model_info.rs  moonshot.rs  ollama.rs  openai.rs  openai_compatible.rs  palm.rs  perplexity.rs  prompt_format.rs  qianwen.rs  rag_dedicated.rs  reka.rs  replicate.rs  reply_handler.rs  sse_handler.rs  stream.rs  vertexai.rs  vertexai_claude.rs
src/config/: agent.rs  bot.rs  conversation.rs  input.rs  message.rs  mod.rs  model_info.rs  role.rs  session.rs
src/core/: mod.rs
src/daemon/: mod.rs
src/function/: permission.rs
src/mcp/: client.rs  config.rs  convert.rs  mod.rs
src/rag/: bm25.rs  loader.rs  mod.rs  serde_vectors.rs  splitter.rs
src/rag/splitter/: language.rs  mod.rs
src/render/: cmd.rs  markdown.rs  mod.rs  repl.rs  stream.rs  streamdown_adapter.rs  wrap.rs
src/repl/: abort.rs  completer.rs  handler.rs  highlighter.rs  hinter.rs  init.rs  mod.rs  prompt.rs  validator.rs
src/utils/: abort_signal.rs  clipboard.rs  command.rs  crypto.rs  html_to_md.rs  input.rs  loader.rs  mod.rs  path.rs  prompt_input.rs  render_prompt.rs  request.rs  spinner.rs  split_line.rs  termbg.rs  tiktoken.rs  variables.rs
tests/: render_test.rs
tests/common/: mod.rs
tests/fixtures/benchmark/: code-heavy.md  large-doc.md  tables-heavy.md
tests/fixtures/markdown/: basic-elements.md  code-blocks.md  complex.md  lists.md  tables.md
themes/dark/: style.toml
themes/light/: style.toml
